<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!-- "Mark Favorite", should appear as action button if possible -->
<!--<item-->
    <!--android:id="@+id/refresh"-->
    <!--android:icon="@drawable/synchronize"-->
    <!--android:title="@string/action_favorite"-->
    <!--app:showAsAction="ifRoom"/>-->


<!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/settings"
        app:showAsAction="never"/>

    <item android:id="@+id/action_help"
        android:title="@string/action_help"
        android:icon="@drawable/help"
        app:showAsAction="never"/>

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:icon="@drawable/about"
        app:showAsAction="never"/>



</menu>